<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.MainActivity">
    <item
        android:id="@+id/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_search_white_36dp"
        app:showAsAction="collapseActionView|always"
        android:title="@string/search_title" />
    <item
        android:id="@+id/share"
        android:orderInCategory="200"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        style="@style/share_icon_visibility"
        app:showAsAction="always" />
    <!--
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/setting"
        app:showAsAction="never" />
        -->
    <item
        android:id="@+id/about"
        android:orderInCategory="400"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
